# mcp-boilerplate

./: .gitignore  README.md  USAGE.md  demo.py  demo_logging.py  env.example  pyproject.toml  test_logging.py  test_setup.py
calculator_agent/: __init__.py  agent.py  llm_client.py  main.py
fastmcp_agent/: agent.py  llm_client.py  main.py  mcp_server.py
fastmcp_agent/examples/: __init__.py  calculator.py
